# Basic-Rust-neuralnet

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
PistonHead/: CMakeLists.txt  Cargo.toml
PistonHead/src/: app.rs  main.rs
Webserver/: Cargo.toml  Dockerfile  entrypoint  redis-master.conf  redis-slave.conf
Webserver/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: config.rs  lib.rs  main.rs
optimized_nn/: Cargo.toml
optimized_nn/src/: main.rs  neural_net.rs
optimized_nn/src/data_loader/: mod.rs
rust_nn/: CMakeLists.txt  Cargo.toml
rust_nn/src/: image_loader.rs  lib.rs  main.rs
rust_nn/src/data_loader/: image.rs  mod.rs
rust_nn/src/neural_net/: layer.rs  math.rs  mod.rs
rust_nn/src/neural_net/layer/: math.rs  mod.rs
rust_nn/src/neural_net/math/: matrix.rs  mod.rs
src/: neural_net.rs
